--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,8 +10,8 @@
  - include: RedHat.yml
    when: ansible_os_family in ['RedHat']
 
- - name: copy ntp configuration file
-   copy: src=ntp.conf dest=/etc
+ - name: ensure ntp configuration file
+   template: src=ntp.conf.j2 dest=/etc/ntp.conf
    notify: restart ntp
 
  - name: ensure ntp is running
