--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,8 @@
 # defaults file for ntp
 
 time_zone: Antarctica/South_Pole
+ntp_servers:
+  - 0.pool.ntp.org
+  - 1.pool.ntp.org
+  - 2.pool.ntp.org
+  - 3.pool.ntp.org
