--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@
 language: python
 python: "2.7"
 
+# testing travis...
+branches:
+    only:
+      - travis-ci
+
 before_install:
   - sudo apt-get update -qq
 
@@ -11,7 +16,7 @@ install:
   - pip install ansible
 
   # Add ansible.cfg to pick up roles path.
-  - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
+  - "echo -e '[defaults]\nroles_path = ../' > ansible.cfg"
 
 script:
   # Check the role/playbook's syntax.
