--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ install:
   - pip install ansible
 
   # Add ansible.cfg to pick up roles path.
+  # test, test test
   - "echo -e '[defaults]\nroles_path = ../' > ansible.cfg"
+  - cat ansible.cfg
+  - "pwd | grep atomo && (echo 'yes' && exit 0) || (echo 'no' && exit 1)"
 
 script:
   # Check the role/playbook's syntax.
